# zpuwallet

./: .gitignore  analysis_options.yaml  pubspec.yaml  vcpkg.json
.github/actions/android-debug/: action.yml
.github/actions/zebra/: action.yml
.github/workflows/: build-docker.yml  build-graphql.yml  build.yml  release-please.yml  wallet.yml
lib/: main.dart  network.dart  prefs.dart  router.dart  settings.dart  store.dart  store.freezed.dart  store.g.dart  theme_mode.dart  utils.dart  vault.dart
lib/pages/: account.dart  accounts.dart  db.dart  disclaimer.dart  lwd_select.dart  networks.dart  new_account.dart  receive.dart  send.dart  splash.dart  sweep.dart  tx.dart  tx_view.dart
lib/src/rust/: frb_generated.dart
lib/src/rust/api/: account.dart  coin.dart  coin.freezed.dart  network.dart  sync.dart  transaction.dart
lib/widgets/: input_amount.dart  theme.dart
macos/Flutter/: GeneratedPluginRegistrant.swift
misc/: PATCH.md  android-win.md  android-win.ps1  build-msys2.md  build-msys2.ps1  build-win.md  build-win.ps1  codegen.ps1  flutter.ps1
rust/: Cargo.toml
rust/src/: account.rs  budget.rs  frb_generated.rs  graphql-cli.rs  sync.rs
rust/src/api/: account.rs  coin.rs  network.rs  sync.rs  transaction.rs
rust/src/graphql/: frost.rs  mutation.rs
rust/src/net/: zebra.rs
servers/: README.md  package.json  servers.json  servers_testnet.json  sync.ts  tsconfig.json
windows/: CMakeLists.txt
