[package]
edition = "2021"
name = "rlz"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[[bin]]
name = "zkool_graphql"
path = "src/graphql-cli.rs"
required-features = ["graphql"]

[dependencies]
zcash-trees = {git = "https://github.com/hhanh00/zcash-trees", rev = "94dd6546a9619f4fa49d0808d5ae6631c0aa4510"}
flutter_rust_bridge = { version = "=2.12.0", optional = true }

anyhow = "1.0.97"
bip39 = "2.1.0"
nonempty = "0.11"
env_logger = "0.11"
hex = "0.4"
log = "0.4"
rand = "0.6"
rand_core = "0.6"
thiserror = "2.0"

hmac = "0.12"

csv-async = "1.3.1"
futures = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_with = {version = "3.17", features = ["hex"]}
sqlx = {version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate"]}
tokio = {version = "1", features = ["full"]}
tokio-rustls = "0.26"
tokio-stream = "0.1"
tokio-util = "0.7"
webpki-roots = "1.0.2"

arti-client = {version = "0.31", features = ["tokio", "native-tls", "onion-service-client"]}
httparse = "1.10.1"
hyper-util = {version = "0.1", features = ["tokio"]}
rayon = "1.10"
reqwest = {version = "0.12", features = ["json", "rustls-tls", "socks"]}
tokio-socks = "0.5.2"
tor-rtcompat = {version = "0.31", features = ["tokio", "native-tls"]}
tower = "0.5"

qrcode = "0.14.1"
raptorq = "2.0.0"

orchard = {version = "0.14", features = ["unstable-frost", "zsa-issuance"]}
pczt = {version = "0.6", features = ["zcp-builder", "io-finalizer", "prover", "signer", "spend-finalizer", "tx-extractor", "transparent", "sapling", "orchard", "issuer", "zip-233"]}
zcash_address = "0.12"
zcash_encoding = "0.4"
zcash_keys = {version = "0.14", features = ["sapling", "orchard", "transparent-inputs"]}
zcash_note_encryption = "0.4"
zcash_primitives = {version = "0.28", features = ["transparent-inputs", "zip-233"]}
zcash_proofs = {version = "0.28", features = ["bundled-prover"]}
zcash_protocol = {version = "0.9", features = ["local-consensus"]}
zcash_script = "0.4"
zcash_transparent = {version = "0.8", features = ["transparent-inputs"]}
zip321 = "0.8"

frost-rerandomized = "2.1.0"
incrementalmerkletree = "0.8"
reddsa = {version = "0.5.1", features = ["frost"]}
redjubjub = "0.8"

argon2 = "0.5"
x25519-dalek = "2.0"
bincode = {version = "2.0", features = ["serde"]}
byteorder = "1.5"
#postcard = "1.1"
bech32 = "0.11"
bip32 = {version = "0.6.0-pre.1", default-features = false}
blake2b_simd = "1.0"
bs58 = "0.5"
chacha20 = "0.9"
chacha20poly1305 = "0.10"
fpdec = "0.11"
group = "0.13"
halo2_gadgets = "0.5"
halo2_proofs = "0.3"
jubjub = "0.10"
ripemd = "0.1"
rustls = {version = "0.23", default-features = false, features = ["ring"]}
sapling-crypto = "0.7"
secp256k1 = "0.29"
sha2 = "0.10"
tonic = {version = "0.14.0", features = ["tls-webpki-roots"]}
tonic-prost = "0.14.0"
prost = "0.14.0"
zip32 = "0.2"

itertools = "0.14"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter", "fmt", "json"]}

age = "0.11.1"
zstd = "0.13.3"

ed25519-dalek = {version = "2.1", default-features = false, features = ["rand_core"]}
cfg-if = "1.0.3"
libsqlite3-sys = {version = "0.30", features = ["bundled-sqlcipher-vendored-openssl"]}

juniper = {version = "0.17", optional = true, features = ["bigdecimal", "chrono"]}
juniper_warp = {version = "0.9", optional = true, features = ["subscriptions"]}
juniper_graphql_ws = {version = "0.5", optional = true}
warp = {version = "0.4", optional = true, features = ["server", "websocket"]}
bigdecimal = {version = "0.4", optional = true}
chrono = {version = "0.4", optional = true}
figment = {version = "0.10", optional = true}
dataloader = {version = "0.18", optional = true}
jsonwebtoken = {version = "10.3", optional = true, features = ["aws_lc_rs"] }
clap = {version = "4.5", optional = true, features = ["derive"]}

ledger-transport = {version = "0.10.0", optional = true}
ledger-transport-zemu = {version = "0.10.0", optional = true}

[target.'cfg(target_os = "macos")'.dependencies]
hidapi = {version = "2.6.3", optional = true}

[target.'cfg(target_os = "linux")'.dependencies]
hidapi = {version = "2.6.3", optional = true, default-features = false, features = ["linux-native"]}

[target.'cfg(target_os = "windows")'.dependencies]
hidapi = {version = "2.6.3", optional = true, default-features = false, features = ["windows-native"]}

[lints.rust]
unexpected_cfgs = {level = "warn", check-cfg = ['cfg(frb_expand)', 'cfg(zcash_unstable, values("nu7"))']}

[dev-dependencies]
chrono = "0.4"
rand = "0.6"

[build-dependencies]
tonic-prost-build = "0.14"

[features]
default = ["flutter"]
flutter = ["flutter_rust_bridge"]
graphql = ["juniper", "juniper_warp", "juniper_graphql_ws", "dataloader", "warp", "jsonwebtoken", "bigdecimal", "chrono", "figment", "clap"]
ledger = ["hidapi", "ledger-transport"]
zemu = ["ledger", "ledger-transport-zemu"]
flutter_rust_bridge = ["dep:flutter_rust_bridge"]

#[patch.crates-io]
#orchard = { path = "../../orchard" }
#sapling-crypto = { path = "../../sapling-crypto" }
#zcash_address = { path = "../../librustzcash/components/zcash_address" }
#zcash_encoding = { path = "../../librustzcash/components/zcash_encoding" }
#zcash_keys = { path = "../../librustzcash/zcash_keys" }
#zcash_note_encryption = { path = "../../zcash_note_encryption" }
#zcash_primitives = { path = "../../librustzcash/zcash_primitives" }
#zcash_proofs = { path = "../../librustzcash/zcash_proofs" }
#zcash_protocol = { path = "../../librustzcash/components/zcash_protocol" }
#zcash_transparent = { path = "../../librustzcash/zcash_transparent" }
#pczt = { path = "../../librustzcash/pczt" }
#zip321 = { path = "../../librustzcash/components/zip321" }
